fixed linter error, added favicon

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
     .card {
       margin: 10px;
       box-shadow: none;
+      cursor: pointer;
       p {
         text-align: center;
       }
