--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@
 
   body{
     background-color: $heroyellow;
+    background-image: url('/images/backgroundtest.svg');
+    background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Permanent Marker', sans-serif;
     color: $black; 
